--- a/content/resources/ec-s11f05.md
+++ b/content/resources/ec-s11f05.md
@@ -2,13 +2,15 @@
 content_type: resource
 description: In Zambia, a peer educator explains the process of voluntary counseling
   and testing (VCT) for HIV / AIDS. Courtesy of USAID.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/ec-s11-engineering-capacity-in-community-based-healthcare-fall-2005/63c7caeff26186c01b9b0347b9081011_ec-s11f05.jpg
+file: /media/courses/ec-s11-engineering-capacity-in-community-based-healthcare-fall-2005/63c7caeff26186c01b9b0347b9081011_ec-s11f05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "In Zambia, a peer educator explains the process of voluntary counseling\
     \ and testing (VCT) for HIV/AIDS. (Courtesy of\_[USAID](http://www.usaid.gov/).)"
   credit: Courtesy of USAID.
   image-alt: Several people sitting and listening to a counselor.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: ec-s11f05.jpg
 uid: 63c7caef-f261-86c0-1b9b-0347b9081011
