--- a/content/resources/ec-s11f05.md
+++ b/content/resources/ec-s11f05.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: Courtesy of USAID.
   image-alt: Several people sitting and listening to a counselor.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: ec-s11f05.jpg
 uid: 63c7caef-f261-86c0-1b9b-0347b9081011
 ---
 In Zambia, a peer educator explains the process of voluntary counseling and testing (VCT) for HIV / AIDS. Courtesy of USAID.
-
