Sync all content

--- a/content/resources/ec-s11f05.md
+++ b/content/resources/ec-s11f05.md
@@ -7,7 +7,8 @@ file_size: 46959
 file_type: image/jpeg
 image_metadata:
   caption: "In Zambia, a peer educator explains the process of voluntary counseling\
-    \ and testing (VCT) for HIV/AIDS. (Courtesy of\_[USAID](http://www.usaid.gov/).)"
+    \ and testing (VCT) for HIV/AIDS. (Courtesy of\_{{% resource_link \"cab8cf7d-1402-4c49-a6ea-58e7113983d3\"\
+    \ \"USAID\" %}}.)"
   credit: Courtesy of USAID.
   image-alt: Several people sitting and listening to a counselor.
 learning_resource_types: []
